# LightYears

./: CmakeLists.txt
LightYears/: CMakeLists.txt
LightYears/include/: EntryPoint.h
LightYears/src/: main.cpp
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/: EntryPoint.h
LightYearsEngine/include/framework/: Actor.h  Application.h  AssetManager.h  Core.h  Object.h  World.h
LightYearsEngine/include/helper/: Math.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  Object.cpp  World.cpp
LightYearsEngine/src/helper/: Math.cpp
LightYearsGame/: CMakeLists.txt  config.h.in
LightYearsGame/include/: config.h
LightYearsGame/include/GameFramework/: GameApplication.h
LightYearsGame/include/player/: PlayerSpaceship.h
LightYearsGame/include/spaceship/: spaceship.h
LightYearsGame/src/GameFramework/: GameApplication.cpp
LightYearsGame/src/player/: PlayerSpaceship.cpp
LightYearsGame/src/spaceship/: spaceship.cpp
